<resources>
    <string name="app_name">Travel Planner</string>
    <string name="action_settings">Settings</string>
    <string name="action_stats">Stats</string>
    <string name="expense_create">Create Expense</string>
    <string name="expense_delete">Delete Expense</string>
    <string name="expense_trip_delete">Delete Trip</string>
    <string name="title_activity_setting">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_user_title">User Settings</string>
    <string name="pref_user_display_name">Display Name</string>
    <string name="pref_user_name_dialog_message">Enter Your Full Name</string>
    <string name="pref_user_name_default">John Smith</string>

    <string name="pref_app_title">App Settings</string>
    <string name="pref_app_currency_title">Currency</string>
    <string name="pref_app_currency_default">USD</string>
    <string-array name="pref_app_currency_entries">
        <item>USD</item>
        <item>CAD</item>
        <item>GBP</item>
        <item>EUR</item>
    </string-array>
    <string-array name="pref_app_currency_entry_values">
        <item>USD</item>
        <item>CAD</item>
        <item>GBP</item>
        <item>EUR</item>
    </string-array>
    <string name="pref_app_date_format">Date Format</string>
    <string name="pref_date_select_format">Date Select Format</string>

    <!-- Strings Related to Create Trip Popup Window -->

    <string name="create_window_heading">Create A New Trip</string>
    <string name="create_window_name_hint">Trip Name</string>
    <string name="create_window_start_date_hint">Start Date</string>
    <string name="create_window_end_date_hint">End Date</string>
    <string name="create_window_budget_currency_hint">Currency</string>
    <string name="create_window_budget_value">Budget Amount (Optional)</string>

    <!-- Strings Related to Create Expense Popup Window -->

    <string name="create_expense_window_heading">Create A New Activity</string>
    <string name="create_expense_window_name_hint">Activity Name</string>
    <string name="create_expense_window_type_hint">Activity Type</string>
    <string name="create_expense_window_type_specifics_hint">Type Options (Optional)</string>
    <string name="create_expense_window_start_date_hint">Start Date</string>
    <string name="create_expense_window_start_time_hint">Start Time</string>
    <string name="create_expense_window_end_date_hint">End Date</string>
    <string name="create_expense_window_end_time_hint">End Time</string>
    <string name="create_expense_window_currency_hint">Currency</string>
    <string name="create_expense_window_cost_hint">Cost</string>

    <!-- Strings Related to RecyclerView -->

    <string name="recycler_title">Example Title</string>
    <string name="recycler_count">Example Count</string>

    <string name="recycler_name">Example Name Text</string>
    <string name="recycler_description">Example Description</string>
    <string name="recycler_time">Example Time</string>
    <string name="recycler_duration">Example Duration</string>
    <string name="recycler_money">Example $ Spent</string>
    <string name="recycler_type_specific">Example Type</string>

    <!-- Strings Related to DisplayTrip -->

    <string name="display_name">Example Display Name</string>
    <string name="display_start_date">Jan 01, 2018</string>
    <string name="display_end_date">Dec 31, 2018</string>
    <string name="display_cost">$1250.25</string>

    <!-- Strings Related to CreateExpenseMenu -->

    <string-array name="expense_items">
        <item name="expense_menu_plane">Transportation</item>
        <item name="expense_menu_train">Accommodation</item>
        <item name="expense_menu_coach">Excursion</item>
        <item name="expense_menu_car">Food</item>
        <item name="expense_menu_boat">Other</item>
    </string-array>

    <string-array name="expense_transportation_items">
        <item name="expense_menu_plane">Plane</item>
        <item name="expense_menu_train">Train</item>
        <item name="expense_menu_coach">Coach</item>
        <item name="expense_menu_car">Car</item>
        <item name="expense_menu_boat">Boat</item>
        <item name="expense_menu_taxiUber">Taxi/Uber</item>
        <item name="expense_menu_other">Other</item>
    </string-array>

    <string-array name="expense_accommodation_items">
        <item name="expense_menu_hotel">Hotel</item>
        <item name="expense_menu_airbnb">Airbnb</item>
        <item name="expense_menu_hostel">Hostel</item>
        <item name="expense_menu_friend">Friend</item>
        <item name="expense_menu_other">Other</item>
    </string-array>

</resources>