<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_user"
        android:title="@string/pref_user_title">

        <EditTextPreference
            android:key="pref_user_name"
            android:title="@string/pref_user_display_name"
            android:dialogMessage="@string/pref_user_name_dialog_message"
            android:defaultValue="@string/pref_user_name_default"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true">
        </EditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_app"
        android:title="@string/pref_app_title">

        <ListPreference
            android:key="pref_app_color"
            android:title="@string/pref_app_color_title"
            android:defaultValue="@string/pref_app_color_default"
            android:entries="@array/pref_app_color_entries"
            android:entryValues="@array/pref_app_color_entry_values">

        </ListPreference>

        <ListPreference
            android:key="pref_app_currency"
            android:title="@string/pref_app_currency_title"
            android:defaultValue="@string/pref_app_currency_default"
            android:entries="@array/pref_app_currency_entries"
            android:entryValues="@array/pref_app_currency_entry_values">

        </ListPreference>

        <SwitchPreference
            android:key="pref_app_date_format"
            android:title="@string/pref_app_date_format"
            android:summaryOff="MM/DD/YYYY"
            android:summaryOn="DD/MM/YYYY"
            android:switchTextOff="switchTextOff"
            android:switchTextOn="switchTextOn"
            >

        </SwitchPreference>



    </PreferenceCategory>


</PreferenceScreen>