<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        card_view:cardBackgroundColor="@color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="40sp"
                android:text="@string/display_name" />

            <TextView
                android:id="@+id/display_start_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="@color/hintText"
                android:text="@string/display_start_date" />

            <TextView
                android:id="@+id/display_end_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="@color/hintText"
                android:text="@string/display_end_date" />

            <TextView
                android:id="@+id/display_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/hintText"
                android:text="@string/display_cost" />

            <TextView
                android:id="@+id/display_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/hintText"
                android:text="@string/display_cost" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.jaychang.srv.SimpleRecyclerView
        android:id="@+id/display_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
    </com.jaychang.srv.SimpleRecyclerView>

</LinearLayout>