<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_medium">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/background_dark">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/expense_recycler_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/recycler_name"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expense_recycler_item_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="5dp"
                android:text="@string/recycler_description"
                android:textColor="@color/hintText"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expense_recycler_item_name" />

            <TextView
                android:id="@+id/expense_recycler_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="8dp"
                android:text="@string/recycler_time"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expense_recycler_item_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="3dp"
                android:text="@string/recycler_time"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expense_recycler_item_time" />

            <View
                android:id="@+id/expense_recycler_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:background="@android:color/darker_gray"
                android:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expense_recycler_item_desc" />

            <ImageView
                android:id="@+id/expense_recycler_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/round_monetization_on_black_18dp" />

            <TextView
                android:id="@+id/expense_recycler_money_spent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/recycler_money"
                android:textColor="@color/hintText"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/expense_recycler_money"
                app:layout_constraintTop_toBottomOf="@+id/expense_recycler_item_desc" />

            <ImageView
                android:id="@+id/expense_recycler_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/expense_recycler_money_spent"
                app:srcCompat="@drawable/round_info_black_18dp" />

            <TextView
                android:id="@+id/expense_recycler_type_specific"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/recycler_type_specific"
                android:textColor="@color/hintText"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/expense_recycler_info"
                app:layout_constraintTop_toBottomOf="@+id/expense_recycler_item_desc" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>